[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/story/intro_pic_02.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/story/intro_pic_01.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/drop_trash_01.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]

resource_name = "swap"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 240, -0.25, 0, 0.25, 0, -240, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 0.8, 1.5 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_has_reached_page_change"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.9 )
}

[node name="IntroScreen" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 240.0
margin_bottom = 240.0
script = ExtResource( 1 )

[node name="Label01" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 1 )
text = "ONCE UPON AN EVENING, YOUR PARENTS LEFT
THE HOUSE AND YOU WOULD BE LOOKING FOR 
THAT OPPORTUNITY SINCE A LONG TIME AGO...

THEY NEVER ALLOWED IT, BUT YOU INVITED
YOUR FRIENDS OVER FOR CELEBRATING...
ACTUALLY WE DON'T CARE WHAT, THE FACT
IS THAT THE PARTY WAS LOUD AND AWESOME."
align = 1

[node name="Label02" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -136.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 1 )
text = "AS IT CAME TO AN END, YOU REALIZED THAT
THINGS GO WILD SOMETIMES DURING PARTIES.
YOU ONLY WANTED TO SLEEP AND HEADED TO
YOUR BEDROOM.

NOW, WAKING UP, YOU REALIZE ALL THE MESS
THAT HAS TO BE CLEANED UP. AND YOUR PARENTS
TEXTED YOU THAT THEY WOULD BE BACK IN NO
TIME. YOU MUST CLEAN THAT HOUSE AND PICK
UP ALL THE TRASH AS FAST AS YOU CAN!"
align = 1

[node name="Image02" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 24.0
margin_right = 135.0
margin_bottom = 88.0
texture = ExtResource( 3 )

[node name="Image01" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 24.0
margin_right = 135.0
margin_bottom = 88.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/swap = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -3.128

